--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
         "docs:build": "vitepress build docs"
     },
     "devDependencies": {
+        "@monstermann/barrels": "^0.3.0",
+        "@monstermann/barrels-namespace": "^0.3.0",
         "@monstermann/eslint-config": "^0.4.0",
         "@monstermann/vitepress-theme": "^0.2.0",
         "@sindresorhus/tsconfig": "^7.0.0",
         "prompts": "^2.4.2",
         "tsdown": "^0.15.0",
         "typescript": "^5.8.3",
-        "vitepress": "^1.6.3",
-        "vitepress-plugin-group-icons": "^1.6.1",
         "vitest": "^3.2.4"
     }
 }
