--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "bundles": "bun run -F '*' bundle",
         "release": "bun run scripts/release",
         "docs": "vitepress dev docs --open",
-        "docs:build": "vitepress build docs"
+        "docs:build": "vitepress build docs",
+        "postinstall": "node scripts/patch-mpd2.js"
     },
     "devDependencies": {
         "@monstermann/barrels": "^0.3.0",
