--- a/packages/mpdtui/package.json
+++ b/packages/mpdtui/package.json
@@ -29,7 +29,9 @@
         "@monstermann/dfdl": "^0.1.0",
         "@monstermann/signals": "^0.0.0",
         "@monstermann/signals-tui": "^0.2.0",
-        "fuzzysort": "^3.1.0",
+        "fuzzysort": "^3.1.0"
+    },
+    "devDependencies": {
         "mpd-api": "^1.1.3"
     }
 }
