--- a/packages/mpdtui/package.json
+++ b/packages/mpdtui/package.json
@@ -29,9 +29,7 @@
         "@monstermann/dfdl": "^0.1.0",
         "@monstermann/signals": "^0.0.0",
         "@monstermann/signals-tui": "^0.2.0",
-        "fuzzysort": "^3.1.0"
-    },
-    "devDependencies": {
+        "fuzzysort": "^3.1.0",
         "mpd-api": "^1.1.3"
     }
 }
