--- a/packages/mpdtui/package.json
+++ b/packages/mpdtui/package.json
@@ -28,8 +28,10 @@
     "dependencies": {
         "@monstermann/dfdl": "^0.1.0",
         "@monstermann/signals": "^0.0.0",
-        "fuzzysort": "^3.1.0",
         "@monstermann/signals-tui": "^0.3.0",
+        "fuzzysort": "^3.1.0"
+    },
+    "devDependencies": {
         "mpd-api": "^1.1.3"
     }
 }
